--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.main.allow-bean-definition-overriding=true
+spring.data.rest.base-path=/rest
+spring.jackson.serialization.INDENT_OUTPUT=true
