--- a/build.gradle
+++ b/build.gradle
@@ -13,14 +13,17 @@ repositories {
 }
 
 bootRun {
-	sourceResources sourceSets.main
+	addResources = true
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	runtimeOnly 'com.h2database:h2'
+	compile 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile 'org.springframework.boot:spring-boot-starter-data-rest'
+	compile 'org.springframework.boot:spring-boot-starter-web'
+	compile 'org.springframework.boot:spring-boot-devtools'
+	//runtimeOnly 'com.h2database:h2'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	compile("org.springframework.boot:spring-boot-starter-security")	
+	compile("org.springframework.boot:spring-boot-starter-security")
+	compile("mysql:mysql-connector-java")
+
 }
