Tarea 2: puntos 6-add player y punto 7:create list web page Actualización tareas módulo 4

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.h2.console.path=/h2-console
 spring.main.allow-bean-definition-overriding=true
 spring.data.rest.base-path=/rest
 spring.jackson.serialization.INDENT_OUTPUT=true
+error.whitelabel.enabled=false
+
